# auto-gain

./: CMakeLists.txt  setup.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
